2008-05-06  Jonh Wendell <jwendell@gnome.org>

	* lots of files: Closes #518351 – Don't show tabs when only one connection is open.

2008-05-06  Jonh Wendell <jwendell@gnome.org>

	* lots of files: Make VinagrePrefs a GObject

2008-05-06  Jonh Wendell <jwendell@gnome.org>

	* src/vinagre-connection.c: Support for host::port, patch from
	Henrik Holst, closes #501165.

2008-05-06  Jonh Wendell <jwendell@gnome.org>

	* configure.ac: requires gtk-vnc 0.3.6

2008-05-05  Jonh Wendell <jwendell@gnome.org>

	* src/vinagre-tab.c,
	* src/vinagre-window.c: Handle correctly clipboard. Closes #530582.

2008-05-05  Jonh Wendell <jwendell@gnome.org>

	* src/Makefile.am: Don't distribute vinagre-enums.[hc]. Closes #531593.

2008-05-02  Jonh Wendell <jwendell@gnome.org>

	* src/vinagre-tab.c: Initial support for VEncrypt sessions.
	Patch from Henrik Holst. Closes #530712.

2008-04-30  Jonh Wendell <jwendell@gnome.org>

	* src/vinagre-prefs-manager.[ch],
	* src/vinagre-tab.c,
	* data/vinagre.schemas.in: Added a gconf key (shared_flag) to tell
	whether to share the desktop with other clients.

2008-04-29  Jonh Wendell <jwendell@gnome.org>

	* Added "Send ctrl-alt-del" option to menu and toolbar.
	Closes #490841. Patch from Henrik Holst.

2008-04-21  Jonh Wendell <jwendell@gnome.org>

	* configure.ac: post-release bump to 2.23.2

==================== 2.23.1 =====================

2008-04-16  Jonathon Jongsma  <jjongsma@gnome.org>

	* src/vinagre-notebook.c: make the notebook tab close buttons smaller to
	save some vertical space

2008-04-16  Jonh Wendell <jwendell@gnome.org>

	Provide a 'read only' mode. Closes #509945.

2008-04-09  Jonh Wendell <jwendell@gnome.org>

	Show avahi-found hosts in side panel and bookmark menu. Closes #512918.
	
	* configure.ac:
	 - Bump avahi dependency to 0.6.22
	 - Bump gtk-vnc dependency to 0.3.5
	 - Avahi dependency is mandatory now
	 - Also depends on avahi-gobject
	* src/vinagre-mdns.[ch]: New files, mdns class
	* vinagre-window.[ch],