@@ -1,3 +1,7 @@
+2008-05-07  Jonh Wendell <jwendell@gnome.org>
+
+	* src/vinagre-tab.c: Closes #531954 – Don't propagate key events.
+
 2008-05-06  Jonh Wendell <jwendell@gnome.org>
 
 	* lots of files: Closes #518351 – Don't show tabs when only one connection is open.
